--- a/index.html
+++ b/index.html
@@ -434,12 +434,12 @@
         <div class="maintext" id="experience_place" style="display: none;">
 
             	<h1><font color="red">Teaching</font></h1>
-		<h2>UC Berkeley:</h2>
+		<h3>UC Berkeley:</h3>
 		<ul>
 			<li><strong><font color="blue">2021:</font></strong> <i>Computing with High-Dimensional Vectors (Neuroscience 299):</i> <strong>Guest Lecturer</strong></li>
 		</ul>
 		
-		<p><font color="blue"><strong>Duke University:</strong></font></p> 
+		<h3>Duke University:</h3>
 		<ul>
 			<li><strong><font color="blue">2018:</font></strong> <i>VLSI System Testing (ECE-538):</i> <strong>Graduate Teaching Assistant</strong></li>
 			<li><strong><font color="blue">2016:</font></strong> <i>CMOS VLSI Design Methodologies (ECE-539):</i> <strong>Guest Lecturer</strong></li>
@@ -447,7 +447,7 @@
 			<li><strong><font color="blue">2014:</font></strong> <i>Computer Architecture (ECE-250):</i> <strong>Graduate Teaching Assistant</strong></li>
 		</ul>
 		
-		<p><font color="blue"><strong>Ain Shams University:</strong></font></p> 
+		<h3>Ain Shams University:</h3>
 		<ul>
 			<li><strong><font color="blue">2011-2013:</font></strong> <i>Computer Organization I (CSE-211):</i> <strong>Teaching Assistant</strong></li>
 			<li><strong><font color="blue">2012-2013:</font></strong> <i>Computer Organization II (CSE-311):</i> <strong>Teaching Assistant</strong></li>
@@ -455,6 +455,7 @@
 			<li><strong><font color="blue">2011-2012:</font></strong> <i>System Modeling and Simulation (CSE-467):</i> <strong>Teaching Assistant</strong></li>
 		</ul>
 
+		<br>
         	<h1><font color="red">Proposal Writing</font></h1> 
 		<p>During my Ph.D. studies, I worked with my advisor, Professor Chakrabarty, on four grant proposals. I made major contributions to the following funded grants:</p>
 		<ul>
@@ -462,178 +463,77 @@
 			<li><strong><font color="blue">2017:</font> U.S. Department of Defense, Army Research Office (ARO) "W911NF-17-1-0320":</strong> <i>Improving Trust in Emerging Digital Microfluidic Biochips-based DNA Forensics. </i></li>
 		</ul>
 
+		<br>
+        	<h1><font color="red">Academic Services</font></h1> 
+		<h3>Technical Program Committee Member:</h3>
+		<ul>
+			<li>IEEE/ACM Design, Automation and Test in Europe Conference (DATE): <strong>2019 - Present</strong>.</li>
+			<li>IEEE/ACM International Conference on Computer-Aided Design (ICCAD): <strong>2021 - Present</strong>.</li>
+			<li>IEEE International Conference on Application-specific Systems, Architectures and Processors (ASAP): <strong>2025 - Present</strong>.</li>
+			<li>IEEE/ACM Asia and South Pacific Design Automation Conference (ASP-DAC): <strong>2025 - Present</strong>.</li>
+			<li>IEEE Computer Society Annual Symposium on VLSI (ISVLSI): <strong>2019 - 2022</strong>.</li>
+			<li>IEEE International Conference on VLSI Design (VLSID): <strong>2019</strong>.</li>
+			<li>IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC): <strong>2019</strong>.</li>
+		</ul>
+
+		<h3>Journal Reviewer:</h3>
+		<ul>
+			<li>IEEE Transactions on Circuits and Systems for Artificial Intelligence (TCASAI)</li>
+			<li>IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD)</li>
+			<li>IEEE Transactions on Very Large Scale Integration Systems (TVLSI)</li>
+			<li>IEEE Transactions on Biomedical Circuits and Systems (TBioCAS)</li>
+			<li>ACM Transactions on Design Automation of Electronic Systems (ACM TODAES)</li>
+			<li>ACM Journal on Emerging Technologies in Computing Systems (ACM JETC)</li>
+			<li>Integration, the VLSI Journal (Elsevier)</li>
+			<li>Microelectronics Journal</li>
+		</ul>
+
+		<h3>Conference Reviewer:</h3>
+		<ul>
+			<li>IEEE/ACM Design, Automation and Test in Europe Conference (DATE)</li>
+			<li>IEEE/ACM Design Automation Conference (DAC)</li>
+			<li>IEEE/ACM International Conference on Computer-Aided Design (ICCAD)</li>
+			<li>IEEE International Symposium on Circuits and Systems (ISCAS)</li>
+			<li>IEEE European Test Symposium (ETS)</li>
+			<li>ACM International Conference on Nanoscale Computing and Communication (NanoCom)</li>
+			<li>IEEE International Conference on Artificial Intelligence Circuits and Systems (AICAS)</li>
+		</ul>
+
+		<br>
+        	<h1><font color="red">Mentorship</font></h1>
+		<h3>Georgia Tech:</h3>
+		<ol reversed>
+			<li><strong><font color="blue">Zishen Wan:</font></strong> Ph.D. student (<strong>2023 - 2025</strong>). </li>
+		</ol>
 		
-        	<h1><font color="red">Visiting Scholar</font></h1>   		
-                <ul>
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year3">2017</div></th>
-                            <th>
-                                <div class="title">Technical University of Munich, Germany</div>
-                                Institute of Electronic Design Automation<br>
-                                <font color="blue">Generously hosted by Professor Ulf Schlichtmann</font><br>
-                                <font color="blue">Visit funded by TUM</font><br>                                
-                            </th>
-                        </tr>
-                    </tbody></table></li>  
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year3">2016</div></th>
-                            <th>
-                                <div class="title">University of Bremen, Germany</div>
-                                Computer Architecture Group<br>
-                                <font color="blue">Generously hosted by Professor Rolf Drechsler</font><br>
-                                <font color="blue">Visit funded by the Alexander von Humboldt Foundation</font><br>                                
-                            </th>
-                        </tr>
-                    </tbody></table></li>                                  
-                </ul>
-            
-        		<h1><font color="red">Academic Services</font></h1>   		
-            <div class="ed_list">
-                <ul>
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year">CR</div></th>
-                            <th>
-                                <div class="title">Conference Reviewer:</div>
-                                IEEE/ACM Design, Automation and Test in Europe Conference (DATE)<br>
-                                IEEE/ACM Design Automation Conference (DAC)<br>
-                                IEEE/ACM International Conference on Computer-Aided Design (ICCAD)<br>
-				IEEE International Symposium on Circuits and Systems (ISCAS)<br>
-				IEEE European Test Symposium (ETS)<br>
-                                ACM International Conference on Nanoscale Computing and Communication (NanoCom)<br>
-				IEEE International Conference on Artificial Intelligence Circuits and Systems (AICAS)<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year">JR</div></th>
-                            <th>
-                                <div class="title">Journal Reviewer:</div>
-                                IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD)<br>
-                                IEEE Transactions on Very Large Scale Integration Systems (TVLSI)<br>
-                                IEEE Transactions on Biomedical Circuits and Systems (TBioCAS)<br>
-				ACM Transactions on Design Automation of Electronic Systems (ACM TODAES)<br>
-				ACM Journal on Emerging Technologies in Computing Systems (ACM JETC)<br>
-				Integration, the VLSI Journal (Elsevier)<br>
-				Microelectronics Journal<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year">TPC</div></th>
-                            <th>
-                                <div class="title">Technical Program Committee Member:</div>
-                                IEEE/ACM Design, Automation and Test in Europe Conference (DATE) 2019-<br>
-                                IEEE International Conference on VLSI Design (VLSID) 2019 <br>
-                                IEEE Computer Society Annual Symposium on VLSI (ISVLSI) 2019-2022<br>
-                                ACM International Conference on Nanoscale Computing and Communication (NanoCom) 2019, 2021 <br>
-                                IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC) 2019 <br>
-				IEEE/ACM International Conference on Computer-Aided Design (ICCAD) 2021-
-				IEEE/ACM Asia and South Pacific Design Automation Conference (ASP-DAC) 2024-
-                            </th>
-                        </tr>
-                    </tbody></table></li>                        
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year">Ment</div></th>
-                            <th>
-                                <div class="title">Mentoring:</div>
-                                <strong>Craig Boswell</strong> (Duke | 2015-2016): Pratt Undergraduate Fellow. Co-author of <strong>C5</strong><br>
-                                <strong>Aditya Sridhar</strong> (Duke | 2016-2018): Undergraduate. Co-author of <strong>C11</strong>, <strong>J12</strong>, and <strong>J16</strong><br>
-                                <strong>Yasamin Moradi</strong> (TUM | 2016-2017): Ph.D. student. Co-author of <strong>C15</strong> and <strong>J15</strong><br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>   
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year">Mem</div></th>
-                            <th>
-                                <div class="title">Membership:</div>
-                                The Institute of Electrical and Electronics Engineers (IEEE)<br>
-                                IEEE Council on Electronic Design Automation (IEEE-CEDA)<br>
-                                IEEE Circuits and Systems Society (IEEE-CAS)<br>
-                                The Association for Computing Machinery (ACM)<br> 
-                                ACM Special Interest Group on Embedded Systems (ACM-SIGBED)<br> 
-                                ACM Special Interest Group on Design Automation (ACM-SIGDA)<br>                                                                                                
-                            </th>
-                        </tr>
-                    </tbody></table></li>                                                                      
-                </ul>
-            </div> 
-            
-        		<h1><font color="red">Industry</font></h1>   		
-            <div class="ed_list">
-                <ul>
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year2">2018</div></th>
-                            <th>
-                                <div class="title">SoC Design Engineer (Full Time)</div>
-                                <font color="blue">Intel Santa Clara, CA, June 2018-Present</font><br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year2">2017</div></th>
-                            <th>
-                                <div class="title">DFT Engineer (Internship)</div>
-                                <font color="blue">Intel Santa Clara, CA, May 2017-November 2017</font><br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>   
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year2">2016</div></th>
-                            <th>
-                                <div class="title">SoC DFX Design Engineer (Internship)</div>
-                                <font color="blue">Intel Austin, TX, May 2016-August 2016</font><br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>  
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year2">2015</div></th>
-                            <th>
-                                <div class="title">SoC DFX Design Engineer (Internship)</div>
-                                <font color="blue">Intel Austin, TX, May 2015-August 2015</font><br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>   
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year2">2011</div></th>
-                            <th>
-                                <div class="title">VLSI Design and Verification Engineer (Part Time)</div>
-                                <font color="blue">Newport Media Inc., Cairo, Egypt, July 2011-June 2013</font><br>
-                                [ NMI acquired by Atmel in August 2014 ]
-                            </th>
-                        </tr>
-                    </tbody></table></li>  
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year2">2010</div></th>
-                            <th>
-                                <div class="title">VLSI Design Engineer (Full Time)</div>
-                                <font color="blue">Mentor Graphics, Cairo, Egypt, August 2010-January 2011</font><br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>  
-                    <li><table>
-                        <tbody><tr>
-                            <th><div class="year2">2009</div></th>
-                            <th>
-                                <div class="title">Embedded Systems Engineer (Internship)</div>
-                                <font color="blue">Mentor Graphics, Cairo, Egypt, May 2009-August 2009</font><br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>                                                                                                         
-                </ul>
-            </div>                                                                                 
+		<h3>UC Berkeley:</h3>
+		<ol reversed>
+			<li><strong><font color="blue">E. Lin, J. Qiao, L. Zhang:</font></strong> MEng Students -- through Berkeley's Fung Institute Leadership Program (<strong>2023 - 2024</strong>). </li>
+			<li><strong><font color="blue">S. Desai, Y. He, A. Pan, N. Santoso, W. Sun, C. Symes, and Y. Wang:</font></strong> MEng Students -- through Berkeley's Fung Institute Leadership Program (<strong>2022 - 2023</strong>). </li>
+		</ol>
+
+		<h3>Duke University:</h3>
+		<ol reversed>
+			<li><strong><font color="blue">Emily Zhao:</font></strong> Undergraduate CS/ECE Student -- through Pratt Alumni Mentorship Program (<strong>2024 - 2025</strong>). </li>
+			<li><strong><font color="blue">Aditya Sridhar:</font></strong> Undergraduate CS Student (<strong>2016 - 2018</strong>). </li>
+			<li><strong><font color="blue">Craig Boswell:</font></strong> Pratt Undergraduate Fellow (<strong>2015 - 2016</strong>). </li>
+		</ol>
+
+		<h3>Technical University of Munich:</h3>
+		<ol reversed>
+			<li><strong><font color="blue">Yasamin Moradi:</font></strong> Ph.D. student (<strong>2016 - 2017</strong>). </li>
+		</ol>
+
+	    	<br>
+        	<h1><font color="red">Industry</font></h1>  
+	    	<ul>
+			<li><strong><font color="blue">2019 - 2021:</font></strong> SoC Design Engineer (Full Time), <i>Intel Santa Clara, CA, USA.</i></li>
+			<li><strong><font color="blue">2017:</font></strong> DFT Engineer (Internship), <i>Intel Santa Clara, CA, USA.</i></li>
+			<li><strong><font color="blue">2015, 2016:</font></strong> SoC DFX Design Engineer (Internship), <i>Intel Austin, TX, USA.</i></li>
+			<li><strong><font color="blue">2011 - 2013:</font></strong> VLSI Design and Verification Engineer (Part Time), <i>Newport Media Inc., Cairo, Egypt.</i></li>
+			<li><strong><font color="blue">2010 - 2011:</font></strong> VLSI Design Engineer (Full Time), <i>Mentor Graphics, Cairo, Egypt.</i></li>
+			<li><strong><font color="blue">2009:</font></strong> Embedded Systems Engineer (Internship), <i>Mentor Graphics, Cairo, Egypt.</i></li>
+		</ul>                                                                                
         </div>
 
 		<!-- <div class="maintext" id="others_place" style="display: none;">
