--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 		<p>I envision a future where <strong>embodied human-centered computing systems</strong>, such as diagnostic devices, seamlessly integrate with human environments and biology, continuously evolving to meet individual needs and dynamically responding to changes in their surroundings. Driven by this vision, my goal is to enhance the capabilities of these systems by developing <strong>cognitive frameworks that are energy-efficient, robust, trustworthy, and explainable</strong>. Unlike existing solutions, my work focuses on creating sustainable sensory-motor cognitive capabilities that enable such systems to learn and adapt in real-time while optimizing energy use, ensuring long-term efficiency and reduced environmental impact. Furthermore, my research is inherently <strong>interdisciplinary</strong>, drawing inspiration from biological principles to design more adaptable and resilient systems. Central to this is the concept of <strong>algorithm-system-hardware co-design</strong>, where cognitive algorithms are developed in conjunction with customized system models and energy-efficient hardware architectures. This holistic design strategy fosters tight integration between computational processes and physical components, resulting in more scalable and robust systems than traditional siloed designs. <br></p>
         	
 		<h1><font color="red">Current Research Projects</font></h1>
-		<p>...</p>
+		<p>Coming soon...!</p>
 
 			
 		<h1><font color="red">Past Research Projects</font></h1>
