--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 
+		    <font color="blue">July 2025:</font> Dr. Ibrahim will serve as a TPC member for VLSID 2026. <br><br>
+
+		    <font color="blue">June 2025:</font> Paper is accepted for presentation at ESSERC 2025!<br><br>
+
+	            <font color="blue">May 2025:</font> Dr. Ibrahim will serve as a TPC member for ASP-DAC 2026!<br><br>
+
 		    <font color="blue">February 2025:</font> Dr. Ibrahim will serve as a TPC member for ICCAD 2025.<br><br>	
 					
 	            <font color="blue">February 2025:</font> Our work on embodied AI acceleration accepted to ASPLOS.<br><br>
@@ -369,6 +375,7 @@
             
             		<h1><font color="red">Conference Papers</font></h1>
 	            	<ol reversed>   
+		        <li><i><font color="blue">HPU: a 168pJ/op Multi-Purpose and Multi-Dimension Binary Hyper-Dimensional Processing Unit for Energy-Efficient Machine Learning</font>,</i> Youbin Kim, <strong>Mohamed Ibrahim</strong>, and Jan Rabaey, <i>IEEE European Solid-State Electronics Research Conference (ESSERC)</i>, 2025. </li>
 			<li><i><font color="blue">ReCA: Integrated Acceleration for Real-Time and Efficient Cooperative Embodied Autonomous Agents</font>,</i> Zishen Wan, Yuhang Du, <strong>Mohamed Ibrahim</strong>, Jiayi Qian, Jason Jabbour, Yang (Katie) Zhao, Vijay Janapa Reddi, Tushar Krishna, and Arijit Raychowdhury, <i>Proceedings of ACM International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)</i>, 2025. </li>
 			<li><i><font color="blue">Thinking and Moving: An Efficient Computing Approach for Integrated Task and Motion Planning in Cooperative Embodied AI Systems</font>,</i> Zishen Wan, Yuhang Du, <strong>Mohamed Ibrahim</strong>, Yang (Katie) Zhao, Tushar Krishna, Arijit Raychowdhury, <i>Proceedings of the IEEE/ACM International Conference on Computer-Aided Design (ICCAD)</i>, 2024. </li>
 			<li><i><font color="blue">Neuro-Symbolic Architecture Meets Large Language Models: A Memory-Centric Perspective</font>,</i> <strong>Mohamed Ibrahim</strong>, Zishen Wan, Haitong Li, Priyadarshini Panda, Tushar Krishna, Pentti Kanerva, Yiran Chen, and Arijit Raychowdhury, <i>Proceedings of IEEE/ACM International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS)</i>, 2024. </li>
@@ -463,7 +470,7 @@
 			<li>IEEE International Conference on Application-specific Systems, Architectures and Processors (ASAP): <strong>2025 - Present</strong>.</li>
 			<li>IEEE/ACM Asia and South Pacific Design Automation Conference (ASP-DAC): <strong>2025 - Present</strong>.</li>
 			<li>IEEE Computer Society Annual Symposium on VLSI (ISVLSI): <strong>2019 - 2022</strong>.</li>
-			<li>IEEE International Conference on VLSI Design (VLSID): <strong>2019</strong>.</li>
+			<li>IEEE International Conference on VLSI Design (VLSID): <strong>2019, 2026</strong>.</li>
 			<li>IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC): <strong>2019</strong>.</li>
 		</ul>
 
